Fix CORS configuration for Railway deployment in securityConfig